Mon Feb  2 13:01:17 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3559_Regression/run_test.pl:
          Fixed error in script for WinCE. Script should be waiting for logfile 
          before calling WaitKill(). Also removed debug command line parameter 
          since this isn't used by the server.

Mon Feb  2 12:14:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport_Cache_Manager_T.cpp:
          Store the transports to be purged into a set and use that set
          for the purging. This way we most oldest lru transport first, then
          work towards the more recent used transports. This fixes bugzilla
          3549

Mon Feb  2 11:48:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Transport_Cache_Manager/Bug_3549_Regression.cpp:
          Improved debug message

        * tests/Transport_Cache_Manager/Bug_3558_Regression.cpp:
        * tests/Transport_Cache_Manager/run_test.pl:
        * tests/Transport_Cache_Manager/TCM.mpc:
          Added regression test for bugzilla 3558

Mon Feb  2 11:18:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport_Cache_Manager.h:
        * tao/Transport_Cache_Manager_T.cpp:
        * tao/Transport_Cache_Manager_T.h:
        * tao/Transport_Cache_Manager_T.inl:
          The purging strategy is now also a template argument

Mon Feb  2 10:54:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Transport_Cache_Manager directory

        * tests/Transport_Cache_Manager/*:
          New directory for just TCM tests using a mock transport,
          transport descriptor interface, and purging strategy.

Mon Feb  2 09:15:00 UTC 2009  Simon Massey  <sma@prismtech.com>

        * tao/AnyTypeCode/TypeCode_CDR_Extraction.cpp:

          Fix Bug_3559.

Mon Feb  2 08:00:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Thread_Lane_Resources.cpp: